Made the decision to hide save button when viewing asset-related discussion. Also removed verbiage for status label as it's only shown when transcribing task is selected and changed the layout and spacing of the status and save row of items. Finally, also fixed the alignment of the tags input so the cursor didn't default to the bottom of the input box. Fixed a small matter of the textarea for transcription and tagging thinking it was resizable.

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -515,6 +515,13 @@ input {
   }
 }
 
+/* Contribute page CSS */
+
+.asset-image {
+  height: calc( 100vh - 6.0625rem );
+  border: 1px solid rgba(245,245,245,1);
+}
+
 .contribute-box {
   height: calc( 100vh - 6.0625rem );
 }
@@ -542,20 +549,15 @@ input {
 }
 
 .tab-content, .tab-pane {
-  height: calc( 33.3vh - ( 3.5rem + 3.375rem ) );
+  height: calc( 40vh - ( 3.5rem + 3.375rem ) );
   overflow-y: scroll;
-}
-
-/* CONTRIBUTE PAGE INLINED STYLES */
-.asset-image {
-  height: calc( 100vh - 6.0625rem );
-  border: 1px solid rgba(245,245,245,1);
 }
 
 .tab-pane textarea {
   background-color: rgba(250,250,250,1);
   height: 100%;
   border: 1px solid rgba(245,245,245,1);
+  resize: none;
 }
 
 .tab-pane textarea::-webkit-input-placeholder, .tab-pane textarea::-moz-placeholder, .tab-pane textarea:-ms-input-placeholder, .tab-pane textarea:-moz-placeholder {
@@ -564,7 +566,8 @@ input {
 
 .tab-pane input {
   color: rgba(51,51,51,1);
-  height: calc( 50vh - ( 3.5rem + 3.375rem ) );
+  height: calc( 40vh - ( 3.5rem + 3.375rem ) );
+  width: 100%;
 }
 
 #tab-discussion {
@@ -573,6 +576,7 @@ input {
 
 #status-id-label {
   color: rgba(250,250,250,1);
+  margin-bottom: 0;
 }
 
 /*
@@ -581,14 +585,15 @@ input {
 */
 
 .bootstrap-tagsinput {
-background-color: #fff;
-border: 1px solid #ccc;
+background-color: rgba(250,250,250,1);
+border: 0px solid #ccc;
 box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 display: inline-block;
-padding: .25rem .375rem;
-color: #555;
+padding: .5rem;
+color: rgba(61,61,61,1);
 vertical-align: middle;
 border-radius: .25rem;
+max-height: calc( 40vh - ( 3.5rem + 3.375rem ) );
 width: 100%;
 line-height: 1.375rem;
 cursor: text;
@@ -600,7 +605,7 @@ outline: none;
 background-color: transparent;
 padding: 0 .375rem;
 margin: 0;
-width: auto;
+width: 100%;
 max-width: inherit;
 }
 .bootstrap-tagsinput.form-control input::-moz-placeholder {
@@ -620,11 +625,12 @@ box-shadow: none;
 
 .bootstrap-tagsinput .badge {
 margin-right: .125rem;
-color: white;
-background-color: #0275d8;
+color: rgba(250,250,250,1);
+background-color: rgba(0,97,142,1);
 padding: .3125rem .5rem;
 border-radius: 3px;
-border: 1px solid #01649e;
+border: 0px solid transparent;
+box-shadow: 0 0 .125rem rgba(51,51,51,.7);
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"] {
@@ -635,9 +641,9 @@ cursor: pointer;
 .bootstrap-tagsinput .badge [data-role="remove"]:after {
 content: "×";
 padding: 0 .25rem;
-background-color: rgba(0, 0, 0, 0.1);
+background-color: rgba(0,35,71,1);
 border-radius: 50%;
-font-size: .87;
+font-size: .88;
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"]:hover:after {
